added styles for a future rendered card and responsivness

--- a/index.html
+++ b/index.html
@@ -53,39 +53,261 @@
          <!--Search block starts-->
          <section class="search-block">
             <div class="container">
-               <form class="search-form" type=submit>
-                  <div class="search-form__body">
-                     <input type="text" class="search-form__input-search" placeholder="Search for a country..."
-                        id="search">
-                     <!--<label for="search" class="search-form__input-search-label">Search for a country...</label>-->
+               <div class="search-block__body">
+                  <form class="search-form" type=submit>
+                     <div class="search-form__body">
+                        <input type="text" class="search-form__input-search" placeholder="Search for a country..."
+                           id="search">
+                        <!--<label for="search" class="search-form__input-search-label">Search for a country...</label>-->
+                     </div>
+                  </form>
+                  <div class="dropdown">
+                     <button class="dropdown__btn">
+                        Filter By Region
+                        <img class="dropdown__icon" src="img/icons/arrow-down.svg" alt="arrow-down">
+                     </button>
+                     <ul class="dropdown__list">
+                        <li>
+                           <a href="#" class="dropdown__link">Africa</a>
+                        </li>
+                        <li>
+                           <a href="#" class="dropdown__link">Amerika</a>
+                        </li>
+                        <li>
+                           <a href="#" class="dropdown__link">Asia</a>
+                        </li>
+                        <li>
+                           <a href="#" class="dropdown__link">Europe</a>
+                        </li>
+                        <li>
+                           <a href="#" class="dropdown__link">Oceania</a>
+                        </li>
+                     </ul>
                   </div>
-               </form>
-               <div class="dropdown">
-                  <button class="dropdown__btn">
-                     Filter By Region
-                     <img class="dropdown__icon" src="img/icons/arrow-down.svg" alt="arrow-down">
-                  </button>
-                  <ul class="dropdown__list">
-                     <li>
-                        <a href="#" class="dropdown__link">Africa</a>
-                     </li>
-                     <li>
-                        <a href="#" class="dropdown__link">Amerika</a>
-                     </li>
-                     <li>
-                        <a href="#" class="dropdown__link">Asia</a>
-                     </li>
-                     <li>
-                        <a href="#" class="dropdown__link">Europe</a>
-                     </li>
-                     <li>
-                        <a href="#" class="dropdown__link">Oceania</a>
-                     </li>
-                  </ul>
                </div>
             </div>
          </section>
          <!--Search block ends-->
+         <!--Countries section starts-->
+         <section class="countries">
+            <div class="container">
+               <div class="countries__body">
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span
+                              class="countries__country-feature--description">Europe</span></p>
+                        <p class="countries__country-feature">Capital:<span
+                              class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span
+                              class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span
+                              class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span
+                              class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span
+                              class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span
+                              class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span
+                              class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+                  <!--Card starts-->
+                  <a class="countries__card">
+                     <figure class="countries__flag">
+                        <img src="img/1.png" alt="country flag" class="countries__img">
+                     </figure>
+                     <div class="countries__country-info">
+                        <h3 class="countries__title">Ukraine</h3>
+                        <p class="countries__country-feature">Population:<span
+                              class="countries__country-feature--description">42,692,393</span>
+                        </p>
+                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
+                        </p>
+                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
+                        </p>
+                     </div>
+                  </a>
+                  <!--Card ends-->
+
+               </div>
+            </div>
+         </section>
+         <!--Countries section ends-->
       </main>
    </div>
 </body>
