--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="container">
                <div class="countries__body">
                   <!--Card starts-->
-                  <a class="countries__card">
+               <!--   <a class="countries__card">
                      <figure class="countries__flag">
                         <img src="img/1.png" alt="country flag" class="countries__img">
                      </figure>
@@ -108,208 +108,15 @@
                               class="countries__country-feature--description">Kiev</span>
                         </p>
                      </div>
-                  </a>
+                  </a> -->
                   <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span
-                              class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span
-                              class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span
-                              class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span
-                              class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span
-                              class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span
-                              class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-                  <!--Card starts-->
-                  <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span class="countries__country-feature--description">Europe</span>
-                        </p>
-                        <p class="countries__country-feature">Capital:<span class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a>
-                  <!--Card ends-->
-
                </div>
             </div>
          </section>
          <!--Countries section ends-->
       </main>
    </div>
+   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </body>
 
 </html>
