added styles and functionality to toggle whether the dark or light state of an app

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="header__logo"></a>
             <div class="header__dark-mode">
                <button class="header__dark-mode-btn">
-                  <img src="img/icons/moon.svg" alt="" class="header__dark-mode-icon">
+                  <img src="img/icons/moon.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--light">
                   <img src="img/icons/moon-dark.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--dark">
                   Dark Mode
                </button>
