implemented functionality to search a country by its name

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
          <section class="search-block">
             <div class="container">
                <div class="search-block__body">
-                  <form class="search-form" type=submit>
+                  <form class="search-form">
                      <div class="search-form__body">
                         <input type="text" class="search-form__input-search" placeholder="Search for a country..."
                            id="search">
@@ -91,26 +91,7 @@
          <!--Countries section starts-->
          <section class="countries">
             <div class="container">
-               <div class="countries__body">
-                  <!--Card starts-->
-               <!--   <a class="countries__card">
-                     <figure class="countries__flag">
-                        <img src="img/1.png" alt="country flag" class="countries__img">
-                     </figure>
-                     <div class="countries__country-info">
-                        <h3 class="countries__title">Ukraine</h3>
-                        <p class="countries__country-feature">Population:<span
-                              class="countries__country-feature--description">42,692,393</span>
-                        </p>
-                        <p class="countries__country-feature">Region:<span
-                              class="countries__country-feature--description">Europe</span></p>
-                        <p class="countries__country-feature">Capital:<span
-                              class="countries__country-feature--description">Kiev</span>
-                        </p>
-                     </div>
-                  </a> -->
-                  <!--Card ends-->
-               </div>
+               <div class="countries__body"></div>
             </div>
          </section>
          <!--Countries section ends-->
