implemented functionality to filter a country by its region name/changed some styles

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="header__logo"></a>
             <div class="header__dark-mode">
                <button class="header__dark-mode-btn">
-                  <img src="img/icons/moon.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--light">
+                  <img src="img/icons/sunny.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--light">
                   <img src="img/icons/moon-dark.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--dark">
                   Dark Mode
                </button>
@@ -68,10 +68,13 @@
                      </button>
                      <ul class="dropdown__list">
                         <li>
+                           <a href="#" class="dropdown__link">All</a>
+                        </li>
+                        <li>
                            <a href="#" class="dropdown__link">Africa</a>
                         </li>
                         <li>
-                           <a href="#" class="dropdown__link">Amerika</a>
+                           <a href="#" class="dropdown__link">Americas</a>
                         </li>
                         <li>
                            <a href="#" class="dropdown__link">Asia</a>
