got more detailed information about countries and did rendering data to display on a modal window

--- a/index.html
+++ b/index.html
@@ -98,6 +98,17 @@
             </div>
          </section>
          <!--Countries section ends-->
+         <!--Modal starts-->
+         <div class="country-modal">
+            <button class="country-modal__close">&times;</button>
+            <div class="country-modal__body">
+               <figure class="country-modal__flag">
+                  <img src="" alt="country flag" class="country-modal__img" loading="lazy">
+               </figure>
+               <div class="country-modal__info"></div>
+            </div>
+         </div>
+         <!--Modal ends-->
       </main>
    </div>
    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
