added styles for a modal window to display more detailed information about the specific

--- a/index.html
+++ b/index.html
@@ -98,6 +98,27 @@
             </div>
          </section>
          <!--Countries section ends-->
+         <!--Modal starts-->
+         <div class="country-modal">
+            <button class="country-modal__close">&times;</button>
+            <div class="country-modal__body">
+               <figure class="country-modal__flag">
+                  <img src="https://restcountries.eu/data/afg.svg" alt="country flag" class="country-modal__img">
+               </figure>
+               <div class="country-modal__info">
+                  <h3 class="country-modal__name">Afganistan</h3>
+                  <p class="country-modal__country-info">Native Name:<span class="country-modal__country-info--description">افغانستان</span></p>
+                  <p class="country-modal__country-info">Population:<span class="country-modal__country-info--description">27657145</span></p>
+                  <p class="country-modal__country-info">Region:<span class="country-modal__country-info--description">Asia</span>
+                  <p class="country-modal__country-info">Sub Region:<span class="country-modal__country-info--description">Southern Asia</span></p>
+                  <p class="country-modal__country-info">Capital:<span class="country-modal__country-info--description">Kabul</span></p>
+                  <p class="country-modal__country-info">Timezones:<span class="country-modal__country-info--description">UTC+04:30</span></p>
+                  <p class="country-modal__country-info">Currency:<span class="country-modal__country-info--description">Afghan afghani</span></p>
+                  <p class="country-modal__country-info">Languages:<span class="country-modal__country-info--description">Pashto, Uzbek, Turkmen</span></p>
+               </div>
+            </div>
+         </div>
+         <!--Modal ends-->
       </main>
    </div>
    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
