added preloader and prefixers to a needed styles

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 </head>
 
 <body>
+   <div class="preloader-container">
+      <div class="preloader-container__loader"></div>
+   </div>
    <div class="wrapper">
       <!--Header starts-->
       <header class="header">
@@ -37,7 +40,7 @@
             <a href="#" class="header__logo"></a>
             <div class="header__dark-mode">
                <button class="header__dark-mode-btn">
-                  <img src="img/icons/sunny.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--light">
+                  <img src="img/icons/sunny.svg" alt="country flag" class="header__dark-mode-icon header__dark-mode-icon--light" loading="lazy">
                   <img src="img/icons/moon-dark.svg" alt="" class="header__dark-mode-icon header__dark-mode-icon--dark">
                   Dark Mode
                </button>
